Closed
Bug 925722
Opened 12 years ago
Closed 12 years ago
Search suggestions require an extra tap to hit
Categories
(Firefox for Android Graveyard :: Awesomescreen, defect)
Tracking
(firefox26 fixed, firefox27 verified, firefox28 verified, b2g-v1.2 fixed, fennec26+)
VERIFIED
FIXED
Firefox 28
People
(Reporter: ibarlow, Assigned: lucasr)
Details
(Keywords: regression, reproducible)
Attachments
(1 file)
|
1.08 KB,
patch
|
sriram
:
review+
lsblakk
:
approval-mozilla-aurora+
lsblakk
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
At some point during our start page redesign, it looks like we changed the behaviour of our search suggestions such that now it requires two taps to trigger instead of just one. We should fix that.
Expected: I type a few letters, and can tap on a search suggest tile and instantly trigger a search
Actual: I need to tap twice now: once to dismiss the keyboard, and once to trigger the search.
Comment 1•12 years ago
|
||
Didn't even notice! Yeah, reproducible.
tracking-fennec: --- → ?
status-firefox26:
--- → affected
status-firefox27:
--- → affected
Keywords: regression,
reproducible
OS: Mac OS X → Android
Hardware: x86 → ARM
I can't repro on my Galaxy Nexus, 4.2.2, FF 27 (Nightly).
Comment 3•12 years ago
|
||
This seems fixed for me as well (10/15). Ian, are you still able to reproduce?
Comment 4•12 years ago
|
||
Still repros for me using a 10/15 nightly. First tap hides the keyboard. Second does the suggestion.
| Reporter | ||
Comment 5•12 years ago
|
||
Yep, still able to reproduce this as well.
Nexus 4, Android 4.3, Nightly 10/16
Updated•12 years ago
|
Assignee: nobody → lucasr.at.mozilla
tracking-fennec: ? → 26+
Updated•12 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 6•12 years ago
|
||
| Assignee | ||
Comment 7•12 years ago
|
||
Comment on attachment 823428 [details] [diff] [review]
Handle touch events in HomeSearchListView with onTouchEvent (r=sriram)
Apparently, touch event interception + requestFocus() don't go so well on ListViews.
Attachment #823428 -
Flags: review?(sriram)
Updated•12 years ago
|
Attachment #823428 -
Flags: review?(sriram) → review+
| Assignee | ||
Comment 8•12 years ago
|
||
| Assignee | ||
Comment 9•12 years ago
|
||
Comment on attachment 823428 [details] [diff] [review]
Handle touch events in HomeSearchListView with onTouchEvent (r=sriram)
[Approval Request Comment]
Bug caused by (feature/regressing bug #): new about:home (bug 862793)
User impact if declined: extra tap needed to trigger a search suggestions while the virtual keyboard is on screen.
Testing completed (on m-c, etc.): local testing for now, let's bake this in Nightly for a few days and then uplift it.
Risk to taking this patch (and alternatives if risky): low, just changes the way to capture touch events to dismiss the virtual keyboard while showing awesomescreen search results.
String or IDL/UUID changes made by this patch: n/a
Attachment #823428 -
Flags: approval-mozilla-beta?
Attachment #823428 -
Flags: approval-mozilla-aurora?
Comment 10•12 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 28
Updated•12 years ago
|
Status: RESOLVED → VERIFIED
status-firefox28:
--- → verified
Updated•12 years ago
|
Attachment #823428 -
Flags: approval-mozilla-beta?
Attachment #823428 -
Flags: approval-mozilla-beta+
Attachment #823428 -
Flags: approval-mozilla-aurora?
Attachment #823428 -
Flags: approval-mozilla-aurora+
Comment 11•12 years ago
|
||
Comment 12•12 years ago
|
||
status-b2g-v1.2:
--- → fixed
Comment 13•12 years ago
|
||
Verified fixed on:
Build: Firefox for Android 27.0a2 (2013-12-06)
Device: Samsung Galaxy Nexus
OS: Android 4.2.1
Updated•5 years ago
|
Product: Firefox for Android → Firefox for Android Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•