import from mozilla upstream: - Bug 925722 - Handle touch events in HomeSearchListView with onTouchEvent (r=sriram) (65699b67e38) - Bug 906402 - security exception when checking signature of favicon, r=mfinkle (723c1317fc0) - xpcshell test change only - Bug 932022 - xpcshell test downloadResumeForSameAppVersion.js always leaves behind downloadResumeForSameAppVersion_applyToDir ater it finishes. r=bbondy (b852bba32d5) - Merge mozilla-central and fx-team (bfc270f4705) - Bug 924480 - Part 1: Make search_container focusable before browser_toolbar. r=bnicholson (0acfb1147ac) - Bug 924480 - Part 1.5: Make HomePager focusable. r=lucasr (262a916f39f) - Bug 924480 - Part 2: Disable TalkBack access to Gecko with HomePager displayed. r=eeejay,lucasr (701a3f885da) - Bug 915918 - Part 1: Select previously selected tab upon editing mode exit. r=lucasr (f716edc0abc) - Bug 915918 - Part 1.5: Refactor hiding of BrowserSearch and HomePager into onStopEditing. r=lucasr (770c7a62a5d) - Bug 915918 - Part 2: openUrl -> openUrlAndExitEditingMode. r=lucasr (c09c677beb5) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (5c7e3fd27df) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (7e3fbcf13b2) - Bug 920551 - 1/2: Allow building b2g without MOZ_B2G_RIL. r=khuey (d74389b3e3e) - Bug 920551 - 2.a/2: fix MobileMessage. r=gene,khuey (e572c7fe099) - Bug 920551 - 2.b/2: fix Telephony. r=hsinyi,khuey (131eae1652d) - Bug 920551 - 2.c/2: fix CellBroadcast. r=hsinyi (600a32f491e) - Bug 920551 - 2.d/2: fix ICC. r=hsinyi,khuey (c6917c2beb6) - Bug 920551 - 2.e/2: fix MobileConnection. r=hsinyi,khuey (812e055581f) - Bug 920551 - 2.f/2: fix Voicemail. r=hsinyi,khuey (152523ac25c) - Bug 920551 - 2.g/2: fix WAP Push. r=hsinyi,khuey (f42c8bdec04) - Bug 920551 - 2.h/2: fix dom/system/gonk/*. r=hsinyi,khuey (8d3ece0bda5) - Bug 920551 - 2.i/2: fix Bluetooth. r=echou (ecd052d94fa) - Bug 920551 - 2.j/2: fix GonkGPSGeolocationProvider. r=kanru (fe8fbe29473) - Bug 931699 - SNTP can only update system time when WiFi or Mobile gets connected (not MMS/SUPL). r=skao,echen (0f1f2b64247) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (68bfd74e65e) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (b2ea54fd35c) - Bug 931038: Remove blocking DBus interface, r=qdot (4a057a1cc6a) - Bumping gaia.json for 1 gaia-central revision(s) a=gaia-bump (40c44faa10d) - Bug 923382 - B2G Multi-SIM: support multiple SIM cards for network metering (a follow-up of bug 887699). r=albert (4c306ee2718) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (b1314d3d55c) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (240e7c40bed) - Bumping gaia.json for 1 gaia-central revision(s) a=gaia-bump (d7700ffd399) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (015c123469b) - Bumping gaia.json for 4 gaia-central revision(s) a=gaia-bump (94b42d22996) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (710cedf85d7) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (efb8f2210ee) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (8c7b3871f22) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (f5cff84a265) - Bug 930952: Dispatch DBus messages after reading socket, r=qdot (8fa9db905d7) - Merge mozilla-central and b2g-inbound (c4fca9c7f50) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (9b747fbc531) - Bumping gaia.json for 1 gaia-central revision(s) a=gaia-bump (ea6acc9aa24) - Bumping gaia.json for 3 gaia-central revision(s) a=gaia-bump (a67620d24cb) - Bug 923961 - Force b2g-desktop to composite on OSX. r=mstange (b313542a2b7) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (27e2e34d105) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (2f465533be9) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump Truncated some number of revisions since the previous bump. (f099d4b6d0c) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (83e3ddb30c6) - Bug 818353 - Part 1: idl changes. f=edgar r=hsinyi (b9646289f29) - Bug 818353 - Part 2: DOM changes - use default client id (0) in MobileConnection. f=hsinyi,edgar r=smaug (7770bc81859) - Bug 818353 - Part 3: DOM changes - use default client id (0) in BT. r=gyeh (26719c17cad) - Bug 818353 - Part 4: DOM changes - use default client id (0) in PhoneNumberUtils. f=edgar r=gwagner (521e1d27b6b) - Bug 818353 - Part 5: RIL implementation. f=edgar r=hsinyi (891fbe98433) - Bug 929941- Listening bluetooth address, name, scan mode events for bluedroid stack, r=echou (e9e5f812ec7) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (610a31add04) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (ca147040ba0) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (b1fe3fca5e7) - Bumping gaia.json for 4 gaia-central revision(s) a=gaia-bump (468cc02b7cb) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (57819065e8a) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (4a0a6056658) - Bug 930853 - [Bluetooth] Support SetProperty function which enables SetName, SetDiscoverable, SetDiscoveryTimeout, r=echou (ee40a658dcb) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (f9d5f285120) - Bumping gaia.json for 1 gaia-central revision(s) a=gaia-bump (e8bff927507) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (3fa29667ada) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (d30ae740d67) - Bumping gaia.json for 6 gaia-central revision(s) a=gaia-bump (39243debc7a) - Bumping gaia.json for 1 gaia-central revision(s) a=gaia-bump (e0081e8068c) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (59eebef26b5) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (f89a61661a1) - Bumping gaia.json for 4 gaia-central revision(s) a=gaia-bump (e4c58054204) - Bumping gaia.json for 1 gaia-central revision(s) a=gaia-bump (7f3f2151626) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (6a67796bab4) - Bumping gaia.json for 4 gaia-central revision(s) a=gaia-bump (eabf21ec806) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (00a9d69ddd6) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (9d84dcadfbf) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (e362af8fef2) - Bug 814625 - Part 1: WebIDL: Code reorder. r=hsinyi, r=khuey (7cea42f8d8c) - Bug 814625 - Part 2: WebIDL: Add multisim support. r=hsinyi, r=khuey (14ad5c30872) - Bug 814625 - Part 3: DOM: Code reorder. r=khuey (61452b55ea6) - Bug 814625 - Part 4: DOM: Refactor. r=khuey (07ea806dbaf) - Bug 814625 - Part 5: DOM: Add multisim support. r=khuey (524bcd44c7f) - Bug 814625 - Part 6: Telephony provider and IDL: Add multisim support. r=hsinyi (0d88291198a) - Bug 814625 - Part 7: Telephony IPC: Add multisim support. r=khuey (a1b5b09f983) - Bug 814625 - Part 8: RIL: Add multisim support. r=hsinyi (f533368bcd7) - Bug 814625 - Part 9: Bluetooth: Add serviceId in listener. r=gyeh (3ecc273f1b6) - Bug 906754 - Ensure that TimeStamp's static fields are initialized only once. r=froydnj (a81746a9660) - Bug 914100 - Keep the focused element of forms.js up to date. r=fabrice (2a868092c9c) - Bug 915783 - [B2G][Browser][PDF]Graphical fragmentation occurs when viewing a pdf via browser. r=jgilbert (6fd4d22c47b) - Bug 920992 - Specify alignments explicitly in assembly codes. r=derf (708d845ac90) - Bug 921917 - B2G MMS: Provide a flag to let user be able to request read report or not when sending MMS. r=gene (1228cd0bfe4) - Bug 922580 - B2G MMS: Stop downloading MMS immediately when airplane mode is on. r=gene (fbab4af1ec8) - Bug 927328 - Make sure app stats is updated when retrieving function is called. r=gene (240d85fb1df) - Bug 925521 - Part 1: remove filter on recorded search engine identifiers. r=gps (80262df43ef) - Bug 925521 - Part 2: correctly record identifiers for non-pre-installed engines. r=gps * * * Bug 925521 - Review comments. (286bec19742) - Bug 925521 - Part 3: follow-up to fix browser tests. r=trivial (9472410b0e2) - Merge m-c to s-c. (af2e02d2a24) - Bug 925517 - Remove filter on recorded search engine identifiers for Fennec. r=mcomella (25f479a6ac3) - Bug 931305 - Avoid bailing out half way through a gradient fill. r=jmuizelaar (831d5edc753) - Bug 931306 - DBusThread fails to compile on latest compilers. r=tzimmermann, r=qDot (2c0c3504dc7) - Bug 925521 - Follow-up: change measurement version in browser_contextSearchTabPosition.js. r=me (d855131238e) - Bug 925521 - Follow-up: context search changes. r=gps (cbfcd6d016c) - Bug 897194: Use outer window ID to match toolbox to tab rather than assuming the currently-selected tab. r=bgrins (960780453bc) - Bug 929865 - Use <activity-alias> to wrap activities in generated namespace. r=nalexander (3341ed1e3c9) - Backed out changeset 8ebfd8ca2b65 for robocop failures. CLOSED TREE (0befe34a3a2) - Bug 925521 - Fix yet another test with a hardcoded version. r=me (97b12480eb8) - Bug 931146 - Set FrameMetrics mMayHaveTouchListeners for all frames that call RecordFrameMetrics. Fixes missing touch info for sub documents. r=tnikkel,kats (731d75722bc) - Bug 931504 - Fire touchcancel to content for every touch point the apz consumes. r=tabraldes (1b4c5c51056) - Bug 918273 - Fix: ContentReceivedTouch doesn't actually cancel event processing in the apzc. r=kats (6c63a152ba7) - Bug 931763 - Simplify handling of first touch start and touch move in MetroInput. r=tabraldes (8d45d752895) - Merge m-c to s-c. (fdbfcf7d247) - Bug 931307 - Remove "!aTitle.IsEmpty()" assertion. r=mhenretty (dc57aaff101) - Bug 932076 - Add check for MediaExtractor creation failure. r=doublec (723dc24f51f) - Bug 807058 - Expose thumbnail size capability and control properties. r=sotaro, r=jst (01d4c2e8136) - Backed out 9 changesets (bug 814625) for desktop build bustage. (c5d90671d14) - Bug 932763 - Setting mozContact's array properties to an empty array should work. r=gwagner (c24f344dbba) - Bug 906877 - Remove code obsoleted by multi-apzc. r=BenWa, vingtetun (e08ba777b17) - Backed out changeset 3e4f6dd35a2b (bug 932763) (7be5760ac19) - Bumping gaia.json for 1 gaia-central revision(s) a=gaia-bump (8527041483b) - Bumping gaia.json for 1 gaia-central revision(s) a=gaia-bump (6641d2bb236) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (aad2637450e) - Bumping gaia.json for 1 gaia-central revision(s) a=gaia-bump (1bdb4601f2c) - Bug 932878 - Allow zero-length blobs. r=khuey. (841a7458ad4) - Backed out changeset 0191d92d4f42 (bug 918273) because it conflicts with bug 906877 which just landed on b2g. r=RyanVM, CLOSED TREE (ffe224c1017) - merge backout of 0191d92d4f42 CLOSED TREE (7c375d24848) - Bug 929435 - Treat undefined as null in Contacts API strings. r=gwagner (627a599f2d7) - Bug 932763 - Setting mozContact's array properties to an empty array should work. r=gwagner (aa85d95ccf4) - Bumping gaia.json for 2 gaia-central revision(s) a=gaia-bump (a5735c07d08) - Merge fx-team to m-c on a CLOSED TREE. (a3e766e2647) - Merge b2g-inbound to m-c on a CLOSED TREE. (a4511eaf5fb) - Merge m-c to inbound on a CLOSED TREE. (1d57260a86e)